tdf#118374: fix crash from loplugin:useuniqueptr in sdext

See bt:
https://bugs.documentfoundation.org/attachment.cgi?id=143105

Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=a9ef943769b06e6bdffe7326f288b27e08a95698

Change-Id: I285f00cb6ede3d952a794b60ff64586fe2224e5f